# guppi

./: .gitignore  README.md  pyproject.toml
guppi/: guppi.py
src/guppi/: __init__.py
src/guppi/header/: __init__.py
tests/: test_guppi.py  test_guppi_header.py
