[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "guppi"
version = "2.0.0"
authors = [
  { name="Wael Farah", email="wael.a.farah@gmail.com" },
  { name="Ross Donnachie", email="code@radonn.co.za" },
]
description = "A simple Guppi RAW multi-antenna reader"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
]

[project.scripts]
pycorr = "guppi:entrypoints.main"